tests/expected_output/error_after_warning/000001-clang-14.0-x86_64-pc-linux-gnu.txt
tests/compile_time_errors/error_after_warning.c:4:10: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
  if  (a = b) {
       ~~^~~
tests/compile_time_errors/error_after_warning.c:4:10: note: place parentheses around the assignment to silence this warning
  if  (a = b) {
         ^
       (    )
tests/compile_time_errors/error_after_warning.c:4:10: note: use '==' to turn this assignment into an equality comparison
  if  (a = b) {
         ^
         ==[0m
dcc explanation: you use '=' to assign to a variable, you use '==' to compare values.
tests/compile_time_errors/error_after_warning.c:8:7: error: use of undeclared identifier 'c'
  a = c;
      ^
dcc explanation:  you have used the name 'c' on line 8 of tests/compile_time_errors/error_after_warning.c without previously declaring it.
If you meant to use 'c' as a variable, check you have declared it by specifying its type
Also  check you have spelled 'c' correctly everywhere.
